src/styles/styles.scss
/* ... */
// =======================
// .ticket and time line
// ======================
.ticket {
  background-color: var(--color-primary);
  color: var(--color-secondary);
  border: 24px solid $bg__muteddark;
  // border: 24px solid transparent ;
  width: 645px;
  height: auto;
  max-height: 100%;
  display: grid;
  position: relative;
  z-index: 10;
  grid-template-columns: 106px calc(100% - 106px);
  box-shadow: 5px 7px 16px -1px #000000;
  font-family: var(--font-body);
  opacity: 1;
  margin-bottom: 6rem;
  user-select: none;
  cursor: pointer;

  &:hover {
    transform-origin: center;
    background: $copy__wheat;

    .ticket__timeline__line {
      border-color: $bg__muteddark;
    }

    .flip-this {
      // flip and spin star
      transition-property: rotate;
      transition: ease-in-out 0.5s;
      transform: rotate(-180deg);
    }
  }

  // closed hover

  @media (max-width: 1024px) {
    grid-template-columns: auto;
    // grid-template-columns: 1fr;
    //  width: min-content;
    // width: 645px;
    width: fit-content;
    // min-width: min-content;
  }

  @media (max-width: 480px) {
    grid-template-columns: auto;
    // grid-template-columns: 1fr;
    //  width: min-content;
    // width: 645px;
    width: 180%;
    // min-width: min-content;
  }

  //alternate stub options -- ODD - --rearange orentation for desktop
  &:nth-of-type(odd) {
    // initial transform/location for desktop
    transform: translate(-51%, 0%);

    @media (max-width: 1024px) {
      transform: translate(0, 0);
    }

    // end intialtransform/location
    .ticket-info {
      transform: translate(-28%, 0px);
      padding-right: 10px;
      padding-left: 0;

      @media (max-width: 1024px) {
        transform: translate(0, 0);
        padding-right: 0;
        padding-left: inherit;
      }
    }

    .ticket-sub {
      transform: translateX(463%) rotate(180deg) perspective(1px) translateZ(0);
      transform-origin: center;

      @media (max-width: 1024px) {
        transform: translateX(0);
      }
    }

    .ticket-main {
      transform: translateX(-23%);

      @media (max-width: 1024px) {
        transform: translateX(0);
      }
    }

    .ticket-seat {
      text-align: end;
      transform: translate(341%, 0px) rotate(180deg);
      backface-visibility: hidden;
      perspective: 100px;

      @media (max-width: 1024px) {
        transform: translate(0, 0);
        text-align: left;
      }
    }
  }

  //  end  alternate stub options -- ODD
  &:nth-of-type(even) {
    transform: translate(50.3%, 0%);

    @media (max-width: 1024px) {
      transform: translate(0, 0);
    }

    .ticket__timeline {
      left: -30px;

      @media (max-width: 1024px) {
        left: inherit;
      }
    }
  }

  //  add responsive rules for both odd and even types
  &:nth-of-type(even),
  &:nth-of-type(odd) {
    &:hover {
      // background: rgba(255,255,255,0.75);

      .ticket__timeline__marker__icon {
        transform-style: preserve-3d;

        transition: ease-in-out 0.6s;
        transform: rotate(180deg);
        transition: all ease-in-out 0.25s;
      }
    }

    transition: ease-in-out 0.6s;
    transition: all ease-in-out 0.25s;
  }

  // end //alternate stub options
  ////////////////////////////////////

  ///ticket point
  &__timeline {
    width: 5px;
    background: $bg__muteddark;
    height: calc(120% + 50px);
    position: absolute;
    right: -31px;
    top: -40px;
    z-index: 10;
    opacity: 1;
    transition: all 0.25s ease-in-out;

    @media (max-width: 480px) {
      height: 170%;
    }

    // &:nth-of-type(even) {}

    &__line {
      width: 5px;
      background: #ff006a;
      height: 100%;
      max-height: 120%;
      position: absolute;
      right: 0;
      top: 0;
    }

    // close .ticket
  }

  &__timeline__marker {
    width: 75px;
    height: auto;
    margin: 0 auto;
    position: relative;
    background: #ff006a;
    z-index: 10;
    font-size: 11px;
    letter-spacing: 0.2em;
    text-align: center;
    text-transform: uppercase;
    position: absolute;
    right: -36px;
    top: -70px;
    border-radius: 100%;
    border: 3px solid white;
    box-shadow: 5px 7px 16px -1px #000000;
    transform: scale(0.8);

    &__icon {
      width: 70px;
      position: relative;
      color: gold;
      width: 70px;
    }
  }

  //   close ticket item
}
/* ... */

